--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* Add application styles & imports to this file! */
+body {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    margin: 0;
+    padding: 30px;
+  }
+  
+  html, body {
+    height: 100%;
+  }
+  
