--- a/src/app/table-overview-example/table-overview-example.html
+++ b/src/app/table-overview-example/table-overview-example.html
@@ -1,9 +1,9 @@
 <mat-form-field appearance="standard">
   <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
 </mat-form-field>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8" *ngIf="events$ | async as dataSource">
   <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- ID Column -->
@@ -11,23 +11,17 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
       <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
-
-    <!-- Progress Column -->
-    <ng-container matColumnDef="progress">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress </th>
-      <td mat-cell *matCellDef="let row"> {{row.progress}}% </td>
-    </ng-container>
-
+    
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
       <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
-    <!-- Fruit Column -->
-    <ng-container matColumnDef="fruit">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Fruit </th>
-      <td mat-cell *matCellDef="let row"> {{row.fruit}} </td>
+    <!-- images Column -->
+    <ng-container matColumnDef="images">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Logo </th>
+      <td mat-cell *matCellDef="let row">  <img [src]="row.images[0].url" /></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -39,5 +33,11 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  <mat-paginator 
+  (page)="handlePage($event)"
+  [length]="100"
+  [pageSizeOptions]="[5, 10, 25, 100]" 
+  aria-label="Select page of users">
+
+  </mat-paginator>
 </div>
