--- a/src/app/table-overview-example/table-overview-example.html
+++ b/src/app/table-overview-example/table-overview-example.html
@@ -1,43 +1,51 @@
-<mat-form-field appearance="standard">
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
-</mat-form-field>
-
-<div class="mat-elevation-z8" *ngIf="events$ | async as dataSource">
-  <table mat-table [dataSource]="dataSource" matSort>
-
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-      <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-    </ng-container>
-    
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-    </ng-container>
-
-    <!-- images Column -->
-    <ng-container matColumnDef="images">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Logo </th>
-      <td mat-cell *matCellDef="let row">  <img [src]="row.images[0].url" /></td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-    </tr>
-  </table>
-
-  <mat-paginator 
-  (page)="handlePage($event)"
-  [length]="100"
-  [pageSizeOptions]="[5, 10, 25, 100]" 
-  aria-label="Select page of users">
-
-  </mat-paginator>
+<div #maincontent *ngIf="events$ | async as dataSource">
+<div *ngIf="dataSource!==null;then content else nocontent"></div>
+<ng-template #content>
+  <mat-form-field appearance="standard">
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="" #input>
+  </mat-form-field>
+  
+  <div class="mat-elevation-z8" >
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+      
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+      </ng-container>
+  
+      <!-- images Column -->
+      <ng-container matColumnDef="images">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Logo </th>
+        <td mat-cell *matCellDef="let row">  <img [src]="row.images[0].url" /></td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+  
+    <mat-paginator 
+    (page)="handlePage($event)"
+    [length]="100"
+    [pageSizeOptions]="[5, 10, 25, 100]" 
+    aria-label="Select page of users">
+    </mat-paginator>
+  </div>
+</ng-template>
+<ng-template #nocontent>
+  No Content
+</ng-template>
 </div>
+
